# RAG-pdf-txt-e-db-with-Stremlit

./: .gitignore  README.md  config.py  database.py  ingestion.py  main.py  my_definitions.db  populate_db.py  pyproject.toml  requirement.txt  streamlit_app.py
graph/: graph.py  state.py
graph/nodes/: generate.py  grade_docs.py  retrieve.py  router.py
txt/: file1.txt
