[project]
name = "rag-pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Federico Falchi",email = "federico.falchi@ariadne.it"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pypdf (>=6.5.0,<7.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "langchain-tavily (>=0.2.16,<0.3.0)",
    "streamlit (>=1.52.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sqlite-web (>=0.6.7,<0.7.0)"
]
